# python-project-template

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml
tests/: test_main.py
